# diffpy.pdfgui

./: .buildinfo  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  AUTHORS.txt  CHANGELOG.md  CHANGELOG.rst  LICENSE.rst  LICENSE.txt  MANIFEST.in  README.rst  README.txt  TODO-2to3.txt  cookiecutter.json  environment.yml  fixHTMLCode.py  genindex.html  index.html  license.html  manual.html  objects.inv  pdfgui.texinfo  py-modindex.html  pyproject.toml  release.html  rever.xsh  run_tests.py  search.html  searchindex.js  setup.py  setup_args.py  tutorial.html
.codespell/: ignore_words.txt
_modules/: index.html
_sources/: manual.rst.txt  tutorial.rst.txt
_static/: documentation_options.js
api/: diffpy.pdfgui.applications.html  diffpy.pdfgui.control.html  diffpy.pdfgui.gui.design.html  diffpy.pdfgui.gui.html  diffpy.pdfgui.gui.wxextensions.html  diffpy.pdfgui.html  diffpy.pdfgui.icons.html
applications/: pdfgui  pdfserver
conda-recipe/: bld.bat  build.sh  conda_build_config.yaml  expandpdfguibase.py  menu-windows.json  meta.suppress_yaml  meta.yaml  run_test.py
devutils/: makesdist
diffpy/: __init__.py
doc/: Makefile  TUTORIAL.rst  TUTORIAL.txt
icons/: buckyfccicon.m  logo.xcf  pdfgui_512x512.xcf  titlepage.xcf
news/: 3.13.rst  build-warning.rst  ci.rst  codecov.rst  colors.rst  conda-recipe.rst  cookiecutter.rst  danselink.rst  danselink_1.rst  doc.rst  docs2501.rst  doctab.rst  fix-gui-functionality.rst  fix-installation.rst  fixwin.rst  gui311cf.rst  html.rst  interp_xtype.rst  linting.rst  matplotlib.rst  news.rst  numpy.rst  osx13.rst  readme.rst  recut.rst  rm-manuals.rst  rm-texinfo.rst  rm_texinfo.rst  six.rst  skpkg-update.rst  textbox-color.rst  tweak-install.rst  updatepcmt.rst  warning.rst  ws.rst  wx3.rst  wxpython.rst
pdfgui/: __init__.py  bugreport.py  tui.py  utils.py  version.py
requirements/: pip.txt  run.txt  test.txt  tests.txt
tests/: TestBugReport.py  TestCalculation.py  TestConstraint.py  TestFitDataSet.py  TestFitStructure.py  TestLoadProject.py  TestPDFDataSet.py  TestPDFGuiControl.py  TestPdfFitSandbox.py  TestStructureViewer.py  control_test.py  lcmocfg.py  nicfg.py  test_aboutdialog.py  test_calculation.py  test_constraint.py  test_datasetpanels.py  test_dopingseriespanel.py  test_extendedplotframe.py  test_fitdataset.py  test_fitstructure.py  test_insertrowsdialog.py  test_loadproject.py  test_mainframe.py  test_parameter.py  test_parameterspanel.py  test_pdfdataset.py  test_pdfguicontrol.py  test_version.py  (+6 more)
(+700 files in other folders)
